--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Vinci Spectra</title>
+  <title>Vinci Spectra Ltd</title>
   <style>
     body {
       background:#0d0d0d; color:#fff; font-family:Helvetica,Arial,sans-serif;
